--- a/12_Oct_2025.md
+++ b/12_Oct_2025.md
@@ -1,37 +1,47 @@
+Beautiful foundation, Harsh 🌸
+Your **Day 1 log** already shows focused, deep learning — we just need to polish the formatting, fix small markdown issues, and make it visually consistent and easy to scan later when you revise.
 
-## Day 1 - October 12, 2025
-
-### **Tasks Completed**
-
-* Revisited Conditional Statements
-* Revised previous concepts
+Here’s your **refined and professional version** (ready to paste in your repo):
 
 ---
 
-### **DSA Practice**
+# 🧘‍♂️ Daily Log
 
-#### **Q1: Contains Duplicate**
+## **Day 1 — October 12, 2025**
 
-[LeetCode Problem Link](https://leetcode.com/problems/contains-duplicate/description/)
+---
 
-**Goal:** Check if an array has any duplicate elements.
+### 🧩 **Tasks Completed**
 
-**Approaches:**
+* Revisited **Conditional Statements**
+* Revised **previous concepts**
 
-1. **Brute Force:** Compare each element with all others → O(n²) → slow.
-2. **Sort + Compare:** Sort array → check consecutive elements → O(n log n).
-3. **HashSet (best):** Loop once → check if element is in Set → O(n) time, O(n) space.
+---
 
-**Steps (HashSet approach):**
+### 🧠 **DSA Practice**
 
-* Create an empty HashSet.
-* Loop through array:
+---
 
-  * If element is already in Set → return true.
-  * Else, add element to Set.
-* If loop ends → return false.
+#### **Q1. Contains Duplicate**
 
-**Java Code (HashSet approach):**
+🔗 [LeetCode Problem Link](https://leetcode.com/problems/contains-duplicate/description/)
+
+**🎯 Goal:**
+Check if an array has any duplicate elements.
+
+---
+
+#### **Approaches**
+
+| Approach       | Idea                                            | Time       | Space | Remarks  |
+| -------------- | ----------------------------------------------- | ---------- | ----- | -------- |
+| Brute Force    | Compare each element with all others            | O(n²)      | O(1)  | Too slow |
+| Sort + Compare | Sort the array, then check consecutive elements | O(n log n) | O(1)  | Better   |
+| HashSet (Best) | Use a Set to track seen numbers                 | O(n)       | O(n)  | Fastest  |
+
+---
+
+#### **Java Code (HashSet Approach)**
 
 ```java
 import java.util.HashSet;
@@ -41,16 +51,18 @@ class Solution {
         HashSet<Integer> seen = new HashSet<>();
         for (int num : nums) {
             if (seen.contains(num)) {
-                return true; // duplicate found
+                return true; // Duplicate found
             }
             seen.add(num);
         }
-        return false; // no duplicates
+        return false; // No duplicates
     }
 }
 ```
 
-**Java Code (Sort + Compare approach):**
+---
+
+#### **Java Code (Sort + Compare Approach)**
 
 ```java
 import java.util.Arrays;
@@ -60,7 +72,7 @@ class Solution {
         Arrays.sort(nums);
         for (int i = 0; i < nums.length - 1; i++) {
             if (nums[i] == nums[i + 1]) {
-                return true;
+                return true; // Adjacent elements are same
             }
         }
         return false;
@@ -68,95 +80,148 @@ class Solution {
 }
 ```
 
-**Key Takeaways: O(n) vs O(n log n)**
+---
 
-* **O(n):** One pass through all elements → linear growth
-* **O(n log n):** Requires sorting → grows slightly faster than linear
-* For large arrays, O(n) is faster and preferred when possible
+#### ⚙️ **Key Takeaways: O(n) vs O(n log n)**
+
+* **O(n):** One pass through all elements → linear growth.
+* **O(n log n):** Sorting required → slightly slower.
+* For large arrays, always prefer **O(n)** if possible.
+* Sorting is only needed when **order matters** or no faster solution exists.
 
 ---
 
-#### **Q2: Richest Customer Wealth**
+#### 🧩 **Concept Summary**
 
-[LeetCode Problem Link]
-(https://leetcode.com/problems/richest-customer-wealth/description/)
+* **O(n)** → One direct loop
+* **O(n log n)** → Sorting-based
+* **Set** is ideal for quick membership checks (constant time)
 
-**Goal:** Find the maximum sum of account balances for any customer.
+---
 
-**Input:** 2D array `accounts[i][j]` → i-th customer, j-th bank.
+#### **Visual Flow (HashSet Approach)**
 
-**Steps:**
+```
+Input: [1, 2, 3, 2]
+↓
+Loop through array:
+1 → add to Set
+2 → add to Set
+3 → add to Set
+2 → already exists → return true
+```
 
-1. Initialize `maxWealth = 0`.
-2. Loop through each customer (outer loop, `i`):
+---
 
-   * Initialize `currentCustomerWealth = 0`.
-   * Loop through each account of that customer (inner loop, `j`):
+#### **Q2. Richest Customer Wealth**
 
-     * Add to `currentCustomerWealth`.
-   * Compare with `maxWealth` → update if greater.
-3. Return `maxWealth`.
+🔗 [LeetCode Problem Link](https://leetcode.com/problems/richest-customer-wealth/description/)
 
-**Java Code:**
+**🎯 Goal:**
+Find the maximum sum of account balances for any customer.
 
+---
+
+#### **Input Format**
+
+* 2D Array `accounts[i][j]` →
+
+  * `i` → Customer index (row)
+  * `j` → Bank account index (column)
+
+---
+
+#### **Steps**
+
+1. Initialize `maxWealth = 0`
+2. For each customer:
+
+   * Reset `currentCustomerWealth = 0`
+   * Add all their bank balances
+   * Update `maxWealth` if higher
+3. Return `maxWealth`
+
+---
+
+#### **Java Code (Refined and Commented)**
+
+```java
 class Solution {
     public int maximumWealth(int[][] accounts) {
-        int maxWealth = 0; // maximum wealth across all customers
+        int maxWealth = 0; // stores richest customer's total wealth
 
-        // Loop through each customer
-        for (int i = 0; i < accounts.length; i++) {
-            int currentCustomerWealth = 0; // sum for current customer
+        // Outer loop → each customer
+        for (int customer = 0; customer < accounts.length; customer++) {
+            int currentCustomerWealth = 0; // reset for each customer
 
-            // Loop through each bank account of the current customer
-            for (int j = 0; j < accounts[i].length; j++) {
-                currentCustomerWealth += accounts[i][j];
+            // Inner loop → each bank account for that customer
+            for (int bank = 0; bank < accounts[customer].length; bank++) {
+                currentCustomerWealth += accounts[customer][bank];
             }
 
-            // Update maxWealth if current customer's wealth is greater
+            // Update maxWealth if current customer is richer
             if (currentCustomerWealth > maxWealth) {
                 maxWealth = currentCustomerWealth;
             }
         }
 
-        return maxWealth; // return the highest wealth
+        return maxWealth; // final richest wealth
     }
 }
 ```
 
-**Extra Explanation:**
+---
 
-* `i` → index of customers (rows)
-* `j` → index of bank accounts for i-th customer (columns)
-* `currentCustomerWealth` → sum for current customer (reset each row)
-* `maxWealth` → stores highest wealth found so far
+#### **Concepts & Visualization**
 
-**Pattern:**
+```
+accounts = [
+ [1, 5],   → wealth = 6
+ [7, 3],   → wealth = 10
+ [3, 5]    → wealth = 8
+]
 
-* Outer loop → each customer
-* Inner loop → each bank account
-* Sum variables inside outer loop, max variables outside
+maxWealth = 10 (richest customer)
+```
+
+**Key Pattern:**
+
+* Outer loop → Customers
+* Inner loop → Accounts
+* Reset `currentCustomerWealth` each time
+* Keep updating `maxWealth`
+
+**Complexity:**
+
+* ⏱ **Time:** O(n × m) → n customers, m accounts each
+* 💾 **Space:** O(1)
 
 ---
 
-### **Today’s Key Learnings**
+### 🌱 **Today’s Key Learnings**
 
-1. **Depth over Quantity**
+#### 1️⃣ **Depth over Quantity**
 
-   * 2 deep problems give more learning than 100 shallow ones.
-   * Tracing logic, visualizing loops, and reasoning deeply is more effective.
+* Solving **2 questions deeply** gave more learning than solving 20 shallowly.
+* True growth = understanding *why* and *how*, not just *what*.
 
-2. **Retention Through Understanding**
+#### 2️⃣ **Retention through Understanding**
 
-   * Fully understanding loops and sums creates mental models.
-   * Concepts like `i` and `j` in 2D arrays apply to hundreds of problems.
+* Once logic is clear, memory becomes natural.
+* Concepts like nested loops and `i/j` indexing now feel intuitive.
 
-3. **Visualization & Notes**
+#### 3️⃣ **Visualization & Notes**
 
-   * Draw diagrams for clarity
-   * Write small notes in your own words
-   * Mentally trace examples
+* Drawing small diagrams helps you **see** logic flow.
+* Writing short notes in your own words reinforces memory.
 
-4. **Sahaj Learning Principle**
+#### 4️⃣ **Sahaj Learning Principle**
 
-   * Short, focused, deep sessions are more effective than long, shallow ones.
-   * Focus on understanding, not just solving numbers of questions.
+* Focused, calm learning is most effective.
+* Like meditation, quality matters more than quantity.
+* The joy of understanding is itself the learning.
+
+---
+
+Would you like me to make a **Day 1 header banner** (with emojis, date, and topic icons) that you can add to all daily logs so they visually look uniform across the repo?
+It’ll make your logs look like a “Daily Code Journal.”
